guleless entry content didn't overflow. Bugid:91123

--- a/mt-static/css/hacks/ie6.css
+++ b/mt-static/css/hacks/ie6.css
@@ -1,5 +1,6 @@
 .dashboard #main-content {
     margin-left: 5px;
+    overflow: hidden;
 }
 
 #dialog-container {
